--- a/video/index.html
+++ b/video/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html class="homePage">
+<head>
+	<!-- This is a comment! Text here will be ignored by the browser. -->
+	<meta charset="UTF-8">
+	<title>Raster Projects</title>
+	<link href="../myCSS.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+  	<h1></h1>Raster Projects</h1>
+  </div>
+  <div class="nav">
+    <h3><a href="../index.html">Home</a> | <a href="../rastor/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.hdml">Animation</a> | <a href="index.html">Video</a> 
+  </div>
+  <div class="content">Hello World!</div>
+  <div class="footer">
+    <h4>About Me | Contact | Copyright 2023</h4>
+  </div>
+</div>
+</body>
+</html>
