--- a/video/index.html
+++ b/video/index.html
@@ -3,13 +3,13 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>Raster Projects</title>
+	<title>Video Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1></h1>Raster Projects</h1>
+  	<h1></h1>Video Projects</h1>
   </div>
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="../rastor/index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.hdml">Animation</a> | <a href="index.html">Video</a> 
