--- a/raster/index.html
+++ b/raster/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="../index.html">Home</a> | <a href="index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> 
   </div>
-  <div class="content">welcome.jpeg</div>
+  <div class="content">Hello Worlds!</div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
