--- a/raster/index.html
+++ b/raster/index.html
@@ -15,7 +15,8 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> 
   </div>
   <div class="content">
-	  <img Welcome.jpg</div>
+	  <h3> Magazine Cover | 2023 </h3>
+	  <img src="Welcome.jpg" alt="Magazine Cover" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
