--- a/raster/index.html
+++ b/raster/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h3> Magazine Cover | 2023 </h3>
-	  <img src="Welcome.jpg" alt="Magazine Cover" width="940">
+	  <img src="welcome.jpg" alt="Magazine Cover" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
