--- a/raster/index.html
+++ b/raster/index.html
@@ -15,8 +15,8 @@
     <h3><a href="../index.html">Home</a> | <a href="index.html">Raster</a> | <a href="../vector/index.html">Vector</a> | <a href="../audio/index.html">Audio</a> | <a href="../animation/index.html">Animation</a> | <a href="../video/index.html">Video</a> 
   </div>
   <div class="content">
-	  <h3> Magazine Cover | 2023 </h3>
-	  <img src="welcome.jpg" alt="Magazine Cover" width="940">
+	  <h3> Gone Rogue | 2023 </h3>
+	  <img src="MagazineCover.jpg" alt="Magazine Cover" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
