--- a/raster/index.html
+++ b/raster/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <h3> Gone Rogue | 2023 </h3>
-	  <img src="MagazineCover.jpg" alt="Magazine Cover" width="960">
+	  <img src="mag.jpg" alt="Magazine Cover" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
