--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a> 
   </div>
   <div class="content"
-	  <img src="welcome.jpg" width="960">
+	 <img src="welcome.jpg" alt="Welcome" width="960">
 	  </div> 
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
