--- a/raster/index.html
+++ b/raster/index.html
@@ -19,6 +19,8 @@
 	  <img src="Mag.jpg" alt="Magazine Cover" width="960">
 	  <h3> Merge Image | 2023 </h3>
 	  <img src="Daisy.jpg" alt="Daisy" width="960">
+	  <h3> Merge Image | 2023 </h3>
+	  <img src="Daisy.jpg" alt="Daisy" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
