--- a/raster/index.html
+++ b/raster/index.html
@@ -18,9 +18,11 @@
 	  <h3> Gone Rogue | 2023 </h3>
 	  <img src="Mag.jpg" alt="Magazine Cover" width="960">
 	  <h3> Merge Image | 2023 </h3>
-	  <img src="Daisy.jpg" alt="Daisy" width="960">
+	  <img src="daisy.jpg" alt="Daisy" width="960">
 	  <h3> Merge Image | 2023 </h3>
-	  <img src="Daisy.jpg" alt="Daisy" width="960">
+	  <img src="IMG-3606.jpg" alt="Pumpkins" width="960">
+	<h3> Merge Image | 2023 </h3>
+	<img src="Mag.jpg" alt="Magazine Cover" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
