--- a/raster/index.html
+++ b/raster/index.html
@@ -18,11 +18,12 @@
 	  <h3> Gone Rogue | 2023 </h3>
 	  <img src="Mag.jpg" alt="Magazine Cover" width="960">
 	  <h3> Merge Image | 2023 </h3>
+	  <h3> Daisy </h3>
 	  <img src="daisy.jpg" alt="Daisy" width="960">
-	  <h3> Merge Image | 2023 </h3>
+	  <h3> Pumpkins </h3>
 	  <img src="IMG-3606.jpg" alt="Pumpkins" width="960">
-	<h3> Merge Image | 2023 </h3>
-	<img src="Mag.jpg" alt="Magazine Cover" width="960">
+	<h3> Cherry Girls </h3>
+	<img src="cherry.jpg" alt="Cherry Girls" width="960">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
