--- a/raster/index.html
+++ b/raster/index.html
@@ -23,7 +23,7 @@
 	  <h3> Pumpkins </h3>
 	  <img src="IMG-3606.jpg" alt="Pumpkins" width="940">
 	<h3> Cherry Girls </h3>
-	<img src="cherry.jpg" alt="Cherry Girls" width="940">
+	<img src="cherry.png" alt="Cherry Girls" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
