--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Digital Media Portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="raster/index.html">Raster</a> | <a href="vector/index.html">Vector</a> | <a href="audio/index.html">Audio</a> | <a href="animation/index.html">Animation</a> | <a href="video/index.html">Video</a> 
+    <h3><a href="index.html">HOME</a> | <a href="raster/index.html">RASTER</a> | <a href="vector/index.html">VECTOR</a> | <a href="audio/index.html">AUDIO</a> | <a href="animation/index.html">ANIMATION</a> | <a href="video/index.html">VIDEO</a> 
   </div>
   <div class="content">
 	 <img src= "welcome.jpg" alt="Welcome" width="960">
