--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1>Digital Media Portfolio</h1>
+  	<h1>Caroline McAllister's Digital Media Portfolio</h1>
   </div>
   <div class="nav">
     <h3><a href="index.html">HOME</a> | <a href="raster/index.html">RASTER</a> | <a href="vector/index.html">VECTOR</a> | <a href="audio/index.html">AUDIO</a> | <a href="animation/index.html">ANIMATION</a> | <a href="video/index.html">VIDEO</a> 
