--- a/raster/index.html
+++ b/raster/index.html
@@ -24,6 +24,8 @@
 	  <img src="IMG-3606.jpg" alt="Pumpkins" width="940">
 	<h3> Cherry Girls </h3>
 	<img src="cherry.png" alt="Cherry Girls" width="940">
+	  <h3> Trophy Child </h3>
+	<img src="albumbd.jpg" alt="Trophy Child" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
