--- a/raster/index.html
+++ b/raster/index.html
@@ -27,7 +27,7 @@
 	  <h3> Trophy Child </h3>
 	<img src="albumbd.jpg" alt="Trophy Child" width="940">
 	   <h3> Frame Inception </h3>
-	<img src="framesfinal.jpg" alt="Frames" width="940">
+	<img src="framesfinal.png" alt="Frames" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
