--- a/raster/index.html
+++ b/raster/index.html
@@ -15,18 +15,18 @@
     <h3><a href="../index.html">HOME</a> | <a href="index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
   <div class="content">
-	  <h3> Gone Rogue | 2023 </h3>
+	  <h3> Gone Rogue | Sep 13, 2023 </h3>
 	  <img src="Mag.jpg" alt="Magazine Cover" width="940">
-	  <h3> Merge Image | 2023 </h3>
+	  <h3> Merge Image | Sep 15, 2023 </h3>
 	  <h3> Daisy </h3>
 	  <img src="daisy.jpg" alt="Daisy" width="940">
 	  <h3> Pumpkins </h3>
 	  <img src="IMG-3606.jpg" alt="Pumpkins" width="940">
 	<h3> Cherry Girls </h3>
 	<img src="cherry.png" alt="Cherry Girls" width="940">
-	  <h3> Trophy Child </h3>
+	  <h3> Trophy Child | Oct 3, 2023 </h3>
 	<img src="albumbd.jpg" alt="Trophy Child" width="940">
-	   <h3> Frame Inception </h3>
+	   <h3> Frame Inception | Oct 26, 2023 </h3>
 	<img src="framesfinal.png" alt="Frames" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
