--- a/vector/index.html
+++ b/vector/index.html
@@ -15,6 +15,10 @@
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
   <div class="content">Hello World!</div>
+	 <h3> Pringles Pan Practice | Nov 20, 2023 </h3>
+	  <img src="pentool.png" alt="Pen Tool" width="940">
+	 <h3> Self Cartoon | Oct 21, 2023 </h3>
+	  <img src="cartoon.png" alt="Self Cartoon" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
