--- a/vector/index.html
+++ b/vector/index.html
@@ -17,8 +17,10 @@
   <div class="content">Hello World!</div>
 	 <h3> Pringles Pen Practice | Nov 20, 2023 </h3>
 	  <img src="pentool.png" alt="Pen Tool" width="940">
-	 <h3> Self Cartoon | Oct 21, 2023 </h3>
+	 <h3> Self Cartoon | Nov 21, 2023 </h3>
 	  <img src="cartoon.png" alt="Self Cartoon" width="940">
+	 <h3> Flower of Life | Nov 21, 2023 </h3>
+	  <img src="fleuroflife.png" alt="Flower" width="940">
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
