--- a/vector/index.html
+++ b/vector/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content"
 	 <h3> Pringles Pen Practice | Nov 20, 2023 </h3>
 	  <img src="pentool.png" alt="Pen Tool" width="940">
 	 <h3> Self Cartoon | Nov 21, 2023 </h3>
