--- a/audio/index.html
+++ b/audio/index.html
@@ -14,7 +14,13 @@
   <div class="nav">
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content"> 
+	<h2> Audio Project</h3>
+	<audio controls autoplay muted>
+  		<source src="file.ogg" type="audio/ogg">
+ 		<source src="file.mp3" type="audio/mpeg">
+</audio>
+  </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
