--- a/audio/index.html
+++ b/audio/index.html
@@ -15,10 +15,10 @@
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
   <div class="content"> 
-	<h2> Audio Project</h3>
+	<h2>30 Second Audio</h3>
 	<audio controls autoplay muted>
-  		<source src="file.ogg" type="audio/ogg">
- 		<source src="file.mp3" type="audio/mpeg">
+  		<source src="30sec2.wav" type="audio/ogg">
+ 		<source src="ASMR.wav" type="audio/mpeg">
 </audio>
   </div>
   <div class="footer">
