--- a/audio/index.html
+++ b/audio/index.html
@@ -17,7 +17,12 @@
   <div class="content"> 
 	<h2>30 Second Audio</h3>
 	<audio controls autoplay muted>
-  		<source src="30sec2.wav" type="audio/ogg">
+  		<source src="30sec2.ogg" type="audio/ogg">
+ 		<source src="30sec2.wav" type="audio/mpeg">
+</audio>
+	<h2>ASMR Project</h3>
+	<audio controls autoplay muted>
+  		<source src="ASMR.ogg" type="audio/ogg">
  		<source src="ASMR.wav" type="audio/mpeg">
 </audio>
   </div>
