--- a/audio/index.html
+++ b/audio/index.html
@@ -15,7 +15,7 @@
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
   </div>
   <div class="content"> 
-	<h2>30 Second Audio</h3>
+	<h2>30 Second Sound Story</h3>
 	<audio controls autoplay muted>
   		<source src="30sec2.ogg" type="audio/ogg">
  		<source src="30sec2.wav" type="audio/mpeg">
