--- a/audio/index.html
+++ b/audio/index.html
@@ -16,15 +16,19 @@
   </div>
   <div class="content"> 
 	<h2>30 Second Sound Story</h3>
-	<audio controls autoplay muted>
+	<audio controls muted>
   		<source src="30sec2.ogg" type="audio/ogg">
  		<source src="30sec2.wav" type="audio/mpeg">
 </audio>
 	<h2>ASMR Project</h3>
-	<audio controls autoplay muted>
+	<audio controls muted>
   		<source src="ASMR.ogg" type="audio/ogg">
  		<source src="ASMR.wav" type="audio/mpeg">
 </audio>
+	  <h2>LightNight Music Festival Commercial</h3>
+	<audio controls muted>
+  		<source src="30seccommercial.ogg" type="audio/ogg">
+ 		<source src="30seccommercial.wav" type="audio/mpeg">
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
