--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	  <video width="960" height="640" controls>
- <source src="BallBounce1.swf" type="video/ogg">
+ <source src="BallBounce1.swf"
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
