--- a/animation/index.html
+++ b/animation/index.html
@@ -17,6 +17,8 @@
   <div class="content">
 	  <video width="960" height="640" controls>
  <source src="BallBounce1.swf"
+	 <h3> The Lakes by Taylor Swift | March 7, 2024 </h3>
+	  <img src="Mag.jpg" alt="Magazine Cover" width="940">
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
