--- a/animation/index.html
+++ b/animation/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	    <h3> The Lakes Lyrics | March 7, 2024 </h3>
-<video width="960" height="640" controls>
+<video width="940" controls>
   <source src="phonics.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
