--- a/animation/index.html
+++ b/animation/index.html
@@ -23,7 +23,7 @@ Your browser does not support the video tag.
 </video>
 	  	    <h3> Ball Journey | February 15, 2024 </h3>
 <video width="940" controls>
-  <source src="phonics.mp4" type="video/mp4">
+  <source src="balljourney.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
