--- a/animation/index.html
+++ b/animation/index.html
@@ -27,6 +27,12 @@ Your browser does not support the video tag.
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
+	  	    <h3> Ball Bounce | February 6, 2024 </h3>
+<video width="940" controls>
+  <source src="BallBounce1.gif" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
 
   </div>
   <div class="footer">
