--- a/animation/index.html
+++ b/animation/index.html
@@ -21,18 +21,22 @@
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
-	  	    <h3> Ball Journey | February 15, 2024 </h3>
+	  	<h3> Sheep | February 27, 2024 </h3>
+	  <video width="940" controls>
+  <source src="sheep.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+	   
+	  <h3> Ball Journey | February 15, 2024 </h3>
 <video width="940" controls>
   <source src="balljourney.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 	  	    <h3> Ball Bounce | February 6, 2024 </h3>
-<video width="940" controls>
-  <source src="BallBounce1.gif" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+<img src="BallBounce1.gif" alt="Ball Bounce" width="940">
+
   		<h3> Ball Bounce | February 6, 2024 </h3>
 	  <video width="940" controls>
   <source src="BallBounce1.gif" type="video/mp4">
