--- a/animation/index.html
+++ b/animation/index.html
@@ -29,17 +29,13 @@ Your browser does not support the video tag.
 </video>
 	   
 	  <h3> Ball Journey | February 15, 2024 </h3>
-<video width="940" controls>
-  <source src="balljourney.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-	  	    <h3> Ball Bounce | February 6, 2024 </h3>
+<img src="ball-journey.gif" alt="Ball Journey" width="940">
+	  
+	  <h3> Ball Bounce | February 6, 2024 </h3>
 <img src="BallBounce1.gif" alt="Ball Bounce" width="940">
 
-  		<h3> Ball Bounce | February 6, 2024 </h3>
-	  <video width="940" controls>
-  <source src="BallBounce1.gif" type="video/mp4">
+  		<h3> Walk Cycle Practice | February 22, 2024 </h3>
+<img src="walkcycle.gif"  alt="Walk Cycle" width="940">
 
   </div>
   <div class="footer">
