--- a/animation/index.html
+++ b/animation/index.html
@@ -3,13 +3,13 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title>ANIMATION PROJECTS</title>
+	<title>Animation Projects</title>
 	<link href="../myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1></h1>Animation Projects</h1>
+  	<h1></h1>ANIMATION PROJECTS</h1>
   </div>
   <div class="nav">
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="index.html">ANIMATION</a> | <a href="../video/index.html">VIDEO</a> 
