--- a/video/index.html
+++ b/video/index.html
@@ -14,7 +14,15 @@
   <div class="nav">
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="index.html">VIDEO</a> 
   </div>
-  <div class="content">Hello World!</div>
+  <div class="content">
+<h3>  | March 7, 2024 </h3>
+<video width="940" controls>
+  <source src="phonics.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+	  
+  </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
   </div>
