--- a/video/index.html
+++ b/video/index.html
@@ -15,12 +15,10 @@
     <h3><a href="../index.html">HOME</a> | <a href="../raster/index.html">RASTER</a> | <a href="../vector/index.html">VECTOR</a> | <a href="../audio/index.html">AUDIO</a> | <a href="../animation/index.html">ANIMATION</a> | <a href="index.html">VIDEO</a> 
   </div>
   <div class="content">
-<h3>  | March 7, 2024 </h3>
-<video width="940" controls>
-  <source src="phonics.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+
+	  <iframe width="940" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
 	  
   </div>
   <div class="footer">
