--- a/video/index.html
+++ b/video/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 
-	  <iframe width="940" height="315"
+	  <iframe width="940"
 src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
 	  
