--- a/video/index.html
+++ b/video/index.html
@@ -17,7 +17,7 @@
   <div class="content">
 
 	  <iframe width="940"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
+src="https://youtu.be/RTO8suaiYM4">
 </iframe>
 	  
   </div>
