--- a/video/index.html
+++ b/video/index.html
@@ -17,10 +17,10 @@
   <div class="content">
 
 	  <iframe width="940"
-src="https://youtu.be/RTO8suaiYM4">
+src="https://youtu.be/embed/RTO8suaiYM4">
 </iframe>
 	   <iframe width="940"
-src="https://youtu.be/PO0cowDE7jk">
+src="https://youtu.be/embed/PO0cowDE7jk">
 </iframe>
 	  
   </div>
