--- a/video/index.html
+++ b/video/index.html
@@ -19,7 +19,7 @@
 	  <iframe width="940"
 src="https://youtu.be/embed/RTO8suaiYM4">
 </iframe>
-	  
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=y76w9KcKZKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>	  
 	  <h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
 	  <iframe width="940"
 src="https://youtu.be/embed/y76w9KcKZKg">
