--- a/video/index.html
+++ b/video/index.html
@@ -16,19 +16,11 @@
   </div>
   <div class="content">
 <h3> Eleanore in San Francisco | April 9, 2024 </h3>
-	  <iframe width="940"
-src="https://youtu.be/embed/RTO8suaiYM4">
-</iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=y76w9KcKZKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>	  
+	  <img src="pentool.png" alt="Pen Tool" width="940">
+
 	  <h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
-	  <iframe width="940"
-src="https://youtu.be/embed/y76w9KcKZKg">
-</iframe>
 
 	  <h3> Wes Anderson Style Reverse Short Film | May 7, 2024 </h3> 
-	  <iframe width="940"
-src="https://youtu.be/embed/PO0cowDE7jk">
-</iframe>
 	  
   </div>
   <div class="footer">
