--- a/video/index.html
+++ b/video/index.html
@@ -16,11 +16,13 @@
   </div>
   <div class="content">
 <h3> Eleanore in San Francisco | April 9, 2024 </h3>
-	  <img src="pentool.png" alt="Pen Tool" width="940">
+	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
 
-	  <h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
-
-	  <h3> Wes Anderson Style Reverse Short Film | May 7, 2024 </h3> 
+<h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
+	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
+	  
+<h3> Wes Anderson Style Reverse Short Film | May 7, 2024 </h3> 
+	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
 	  
   </div>
   <div class="footer">
