--- a/video/index.html
+++ b/video/index.html
@@ -19,10 +19,10 @@
 	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
 
 <h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
-	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
+	  <img src="cruelpic.png" alt="Cruel Summer Movie Trailer" width="940">
 	  
 <h3> Wes Anderson Style Reverse Short Film | May 7, 2024 </h3> 
-	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
+	  <img src="reversepic.png" alt="Wes Anderson Style Reverse Short Film" width="940">
 	  
   </div>
   <div class="footer">
