--- a/video/index.html
+++ b/video/index.html
@@ -17,13 +17,16 @@
   <div class="content">
 <h3> Eleanore in San Francisco | April 9, 2024 </h3>
 	  <img src="30sectrip.png" alt="Eleanore in San Francisco" width="940">
+	  <h3>View this video using the link: https://youtu.be/RTO8suaiYM4</h3>
 
 <h3> Cruel Summer Movie Trailer | April 23, 2024 </h3> 
 	  <img src="cruelpic.png" alt="Cruel Summer Movie Trailer" width="940">
-	  
+	   <h3>View this video using the link:	https://youtu.be/y76w9KcKZKg</h3>
+
 <h3> Wes Anderson Style Reverse Short Film | May 7, 2024 </h3> 
 	  <img src="reversepic.png" alt="Wes Anderson Style Reverse Short Film" width="940">
-	  
+	  <h3>View this video using the link:	https://youtu.be/PO0cowDE7jk</h3>
+
   </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
